fixed cards to one column on mobile

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -21,14 +21,14 @@ body {
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  font-size: 22px;
+  font-size: 16px;
 }
 
 footer {
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  font-size: 16px;
+  font-size: 12px;
   color: #f6f5f2;
   background-color: #142d3a;
   border-top: 2px groove #142d3a;
@@ -166,7 +166,7 @@ button:hover,
   color: #f6f5f2;
   max-width: 800px;
   margin: auto;
-  /* font-size: 20px; */
+  font-size: 20px;
 }
 
 .content {
@@ -289,7 +289,6 @@ button:hover,
   width: 150px;
   margin-top: 5px;
   margin-right: 10px;
-  border-radius: 100%;
 }
 
 .about-text {
@@ -512,6 +511,8 @@ button:hover,
 
 @media all and (max-width: 500px) {
   .grid {
+    display: -ms-grid;
+    display: grid;
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
   }
@@ -540,6 +541,8 @@ button:hover,
 
 @media all and (min-width: 500px) and (max-width: 800px) {
   .grid {
+    display: -ms-grid;
+    display: grid;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
   }
