--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,6 @@ button:hover,
   width: 150px;
   margin-top: 5px;
   margin-right: 10px;
-  border-radius: 100%;
 }
 
 .about-text {
@@ -419,6 +418,7 @@ button:hover,
 
 @media all and (max-width: 500px) {
   .grid {
+    display: grid;
     grid-template-columns: 1fr;
   }
 
@@ -445,6 +445,7 @@ button:hover,
 
 @media all and (min-width: 500px) and (max-width: 800px) {
   .grid {
+    display: grid;
     grid-template-columns: 1fr 1fr;
   }
 
